--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@ body {
 }
 
 form {
-    width: 350px;
-    margin-top: 350px;
+    width: 400px;
+    margin-top: 30vh;
     margin-left: auto;
     margin-right: auto;
 }
 input {
     display: block;
     width: 100%;
-    height: 30px;
+    height: 40px;
     border: none;
     background-color: rgba(0, 0, 0, 0.082);
 }
@@ -19,7 +19,7 @@ input {
 button {
      width: 101%;
      border: none;
-     height: 30px;
+     height: 40px;
      background-color: red;
      color: white;
      border-radius: 3px;
