--- a/style.css
+++ b/style.css
@@ -29,17 +29,18 @@ input {
     width: 100%;
     height: 40px;
     border: none;
-    background-color: rgba(0, 0, 0, 0.082);
+    background-color: rgba(128, 125, 125, 0.082);
 }
 
 button {
      width: 101%;
      border: none;
      height: 40px;
-     background-color: red;
+     background-color: rgb(207, 12, 12);
      color: white;
      border-radius: 3px;
      font-size: larger;
+     cursor: pointer;
  }
 
 .header h1 {
@@ -51,20 +52,29 @@ a {
     color: red;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 footer {
     position: fixed;
     width: 100%;
     text-align: center;
-    margin-top: 26vh;
+    margin-top: 23vh;
 }
 
 .socialmedia {
-    margin-bottom: 35px;
+    margin-bottom: 30px;
 }
 
 .socialmedia a {
     color: rgb(85, 83, 83);
     font-weight: bold;
+}
+
+.socialmedia a:hover {
+    text-decoration: underline;
+    
 }
 
 .copyright {
